<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/creditCalc"
        android:textColor="@color/black"
        android:textSize="12pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginBottom="32dp"
        android:background="@color/greenColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:background="@color/white"
            android:text="@string/sumCredit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="8pt"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/srokCredit"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginBottom="64dp"
            android:background="@color/white"
            android:hint="@string/howLongCredit"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="6pt"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/monthET"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/monthET"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginBottom="64dp"
            android:background="@color/white"
            android:hint="@string/everyMonth"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="6pt"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/regBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/regBtn"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:backgroundTint="@color/darkGreen"
            android:text="@string/reg"
            android:textStyle="bold"
            android:textSize="8pt"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>